--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "@types/node": "^20.14.8",
     "bootstrap": "^5.3.3",
     "json-server": "^0.17.4",
     "rxjs": "~7.5.0",
